# haskell-terminal

./: .gitignore  Makefile  cabal.project  package.yaml  terminal.cabal
app/terminal-ev/: Main.hs
app/terminal-out/: Main.hs
app/terminal-printer/: Main.hs
app/terminal-screen/: Main.hs
platform/posix/src/System/Terminal/: Platform.hsc
src-internal/Control/Monad/Terminal/: Decoder.hs  Input.hs  Terminal.hs  TerminalT.hs
src-internal/System/Terminal/: Encoder.hs  MonadInput.hs  MonadPrinter.hs  MonadScreen.hs  MonadTerminal.hs  Terminal.hs  TerminalT.hs
src/Control/Monad/: Terminal.hs
src/System/: Terminal.hs
terminal/: terminal.cabal
terminal-posix/: terminal-posix.cabal
terminal-windows/: terminal-windows.cabal
terminal/internals/: .dir-locals.el
terminal/internals/System/Terminal/: Types.hs
