name:           terminal-windows
version:        0.1.0.0
synopsis:       Portable terminal Portable (Linux & Windows & OSX) terminal-interaction — Windows 10+ (ten) implementation
description:    Please see the README on Github at <https://github.com/sboosali/terminal#readme>
category:       Terminal
homepage:       https://github.com/sboosali/terminal#readme
bug-reports:    https://github.com/sboosali/terminal/issues
author:         Lars Petersen
maintainer:     info@lars-petersen.net
copyright:      2018 Lars Petersen
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 2.0
extra-source-files:
    README.md
    CHANGELOG.md
    LICENSE
    cbits/hs_terminal.c
    include/hs_terminal.h
    src/System/Terminal/Platform.hsc

source-repository head
  type: git
  location: https://github.com/sboosali/terminal

library
  exposed-modules:
      System.Terminal
  other-modules:
      Paths_terminal
  hs-source-dirs:
      src
  default-extensions: LambdaCase MultiWayIf BlockArguments OverloadedStrings GeneralizedNewtypeDeriving TupleSections
  ghc-options: -Wall -fwarn-incomplete-patterns
  build-depends:
      async
    , base >=4.7 && <5
    , bytestring
    , exceptions >=0.10.0
    , prettyprinter
    , stm
    , terminal-internal
    , text
    , transformers
  default-language: Haskell2010

library terminal-internal
  exposed-modules:
      System.Terminal.Decoder
      System.Terminal.Encoder
      System.Terminal.MonadInput
      System.Terminal.MonadPrinter
      System.Terminal.MonadScreen
      System.Terminal.MonadTerminal
      System.Terminal.Pretty
      System.Terminal.ScreenState
      System.Terminal.Terminal
      System.Terminal.TerminalT
      System.Terminal.Platform
      System.Terminal.Virtual
  other-modules:
      Paths_terminal
  default-extensions: LambdaCase MultiWayIf BlockArguments OverloadedStrings GeneralizedNewtypeDeriving TupleSections
  ghc-options: -Wall -fwarn-incomplete-patterns
  build-depends:
      async
    , base >=4.7 && <5
    , bytestring
    , exceptions >=0.10.0
    , prettyprinter
    , stm
    , text
    , transformers

    hs-source-dirs:
        platform/windows/src
    include-dirs:
        platform/windows/include
    c-sources:
        platform/windows/cbits/hs_terminal.c

  default-language: Haskell2010

test-suite terminal-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Spec.Virtual
      Paths_terminal
  hs-source-dirs:
      test
  default-extensions: LambdaCase MultiWayIf BlockArguments OverloadedStrings GeneralizedNewtypeDeriving TupleSections
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      async
    , base >=4.7 && <5
    , bytestring
    , exceptions >=0.10.0
    , prettyprinter
    , stm
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , terminal
    , terminal-internal
    , text
    , transformers
  default-language: Haskell2010
